# aoc2022

./: .gitignore  Cargo.toml
src/01/: main.rs  util.rs
src/02/: choice.rs  game_outcome.rs  main.rs
src/03/: compartments.rs  groups.rs  main.rs  util.rs
src/04/: main.rs  range.rs
src/05/: main.rs
src/06/: main.rs
