[package]
name = "_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_01"
path = "src/01/main.rs" 
test = false
bench = false
[[bin]]
name = "day_02"
path = "src/02/main.rs" 
test = false
bench = false
[[bin]]
name = "day_03"
path = "src/03/main.rs" 
test = false
bench = false
[[bin]]
name = "day_04"
path = "src/04/main.rs" 
test = false
bench = false
[[bin]]
name = "day_05"
path = "src/05/main.rs" 
test = false
bench = false
[[bin]]
name = "day_06"
path = "src/06/main.rs" 
test = false
bench = false
[[bin]]
name = "day_07"
path = "src/07/main.rs" 
test = false
bench = false
[[bin]]
name = "day_08"
path = "src/08/main.rs" 
test = false
bench = false
[[bin]]
name = "day_09"
path = "src/09/main.rs" 
test = false
bench = false
[[bin]]
name = "day_10"
path = "src/10/main.rs" 
test = false
bench = false
[[bin]]
name = "day_11"
path = "src/11/main.rs" 
test = false
bench = false
[[bin]]
name = "day_12"
path = "src/12/main.rs" 
test = false
bench = false
[[bin]]
name = "day_13"
path = "src/13/main.rs" 
test = false
bench = false
[[bin]]
name = "day_14"
path = "src/14/main.rs" 
test = false
bench = false
[[bin]]
name = "day_15"
path = "src/15/main.rs" 
test = false
bench = false
[[bin]]
name = "day_16"
path = "src/16/main.rs" 
test = false
bench = false
[[bin]]
name = "day_17"
path = "src/17/main.rs" 
test = false
bench = false
[[bin]]
name = "day_18"
path = "src/18/main.rs" 
test = false
bench = false
[[bin]]
name = "day_19"
path = "src/19/main.rs" 
test = false
bench = false
[[bin]]
name = "day_20"
path = "src/20/main.rs" 
test = false
bench = false
[[bin]]
name = "day_21"
path = "src/21/main.rs" 
test = false
bench = false
[[bin]]
name = "day_22"
path = "src/22/main.rs" 
test = false
bench = false
[[bin]]
name = "day_23"
path = "src/23/main.rs" 
test = false
bench = false
[[bin]]
name = "day_24"
path = "src/24/main.rs" 
test = false
bench = false

[dependencies]
regex = "1"